# quantum-dungeon

./: .gitignore  Cargo.toml  README.md  geng_template.js  geng_template.wasm  index.html
.github/workflows/: deploy.yml  lint.yml  test.yml
assets/: config.ron
assets/items/: _list.ron  boots.txt  camera.txt  charmingstaff.txt  chest.txt  cursedskull.txt  electricrod.txt  fire_scroll.txt  firescroll.txt  forge.txt  ghost.txt  goldenlantern.txt  greedypot.txt  kingskull.txt  magictreasurebag.txt  magicwire.txt  map.txt  melter.txt  phantom.txt  radiationcore.txt  shoes.txt  solitude.txt  soulcrystal.txt  spiritcoin.txt  sword.txt  warpportal.txt
assets/items/boots/: config.ron  script.rn
assets/items/camera/: config.ron  description.txt  script.rn
assets/items/charming_staff/: config.ron  description.txt  script.rn
assets/items/chest/: config.ron  description.txt  script.rn
assets/items/cursed_skull/: config.ron  script.rn
assets/items/electric_rod/: config.ron  description.txt
assets/items/fire_scroll/: config.ron  description.txt  script.rn
assets/items/forge/: config.ron  description.txt  script.rn
assets/items/ghost/: description.txt
assets/items/golden_lantern/: config.ron  script.rn
assets/items/greedy_pot/: config.ron  description.txt  script.rn
dev/: geng_template.js  geng_template.wasm
dev/assets/: config.ron
src/: assets.rs  config.rs  controls.rs  game.rs  main.rs  main_menu.rs  prelude.rs  util.rs
src/model/: animation.rs  effect.rs  engine.rs  entity.rs  grid.rs  item.rs  mod.rs  player.rs
src/render/: mod.rs
(+72 files in other folders)
