[package]
name = "geng_template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
generational-arena = "0.2.9"
geng = "0.15.0"
geng-utils = { git = "https://github.com/Nertsal/geng-utils" }
rune = "0.13.1"
serde = { version = "1.0.188", features = ["derive"] }
