[package]
name = "geng_template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
generational-arena = { version = "0.2.9", features = ["serde"] }
rune = "0.13.1"
geng = "0.17.0"
geng-utils = "0.3.0"
serde = { version = "1.0.188", features = ["derive"] }

[patch.crates-io]
async-broadcast = { git = "https://github.com/kuviman/async-broadcast", branch = "fix-wasm" } # TODO: until https://github.com/smol-rs/async-broadcast/pull/47 is merged
